fix(kubrick): overflow issues with frame-content
1. the loading bar was squeezed to zero, since it wasn't flex with a
basis against the content container which is flex-grow: 1
2. with the content area now nested, the child of parent main-container
does not have overflow: auto anymore

--- a/src/media/asset/style_glass.css
+++ b/src/media/asset/style_glass.css
@@ -1502,15 +1502,15 @@ hr {
 
 
 .widget__loading-bar {
-  height: 4px;
+  flex-basis: 4px;
   background-color: rgba(5, 114, 206, 0.2);
   width: 100%;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .widget__loading-bar-value {
   width: 100%;
-  height: 100%;
+  height: 4px;
   background-color: #7b00ff;
   animation: widget__loading_bar_animation 1s infinite linear;
   transform-origin: 0% 50%;
